# pb_jump

./: .gitignore  agent_training.py  check_env.py  custom1DCNN.py  jump_base_model.py  jump_matrices.py  jump_model.py  jump_model_1.py  jump_model_2.py  jumper_env.py
jump_rgc/: CMakeLists.txt
jump_rgc/include/jump_rgc/: jump_robot_model.h  op_wrapper.h  opt_problem.h  opt_problem1.h  opt_problem2.h  opt_problem3.h  opt_problem4.h  opt_problem5.h  opt_problem6.h  pred_control.h
jump_rgc/src/: jump_robot_model.cpp  op_wrapper.cpp  opt_problem.cpp  opt_problem1.cpp  opt_problem2.cpp  opt_problem3.cpp  opt_problem4.cpp  opt_problem5.cpp  opt_problem6.cpp  pred_control.cpp  pybind_opWrapper.cpp
model/: jump.urdf  jump_2.urdf  visualize.py
model/meshes/: body.stl  foot.stl  lower_leg.stl  upper_leg.stl
